# gaussian-splatting-c

./: .gitignore  README.md  environment.yml  render.py
diff-gaussian-rasterization/: .gitignore  CMakeLists.txt  README.md  ext.cpp  rasterize_points.cpp  rasterize_points.h  setup.py  test.c  test.cpp
diff-gaussian-rasterization/cpu_rasterizer/: auxiliary.c  auxiliary.h  config.h  forward.c  forward.h  rasterizer.h  rasterizer_impl.c
gaussian_renderer/: __init__.py
scene/: gaussian_model.py
